Fix overflowing CSS

--- a/app/assets/stylesheets/schools/index.css
+++ b/app/assets/stylesheets/schools/index.css
@@ -6,7 +6,7 @@
     align-items: stretch;
 }
 
-.school.header {
+#school_index .school.header {
     top: 9vh;
     position: sticky;
     font-size: var(--sub-heading-size);
@@ -15,14 +15,14 @@
     background-color: var(--ku-dark-background);
 }
 
-.school {
+#school_index .school {
     padding: 1vw;
 }
 
-.school:nth-child(even) {
+#school_index .school:nth-child(even) {
     background-color: var(--ku-background);
 }
 
-.school:nth-child(odd) {
+#school_index .school:nth-child(odd) {
     background-color: var(--ku-dark-background);
 }
